2010-10-26 TJ Vanderpoel <tj@rubyists.com>

	* 20101026-7 :
	Changed handling of configuration so that it
	  will not be overwritten on upgrades

	* 20101026-5 :
	Removed libtool files from lib dirs
	Moved primary --prefix to /var/lib/freeswitch
	More symlinks to get the mod/*.so files into
	 /usr/lib/freeswitch where namcap wants them.

	* 20101026-4 :
	Got rid of empty vars in PKGBUILD

	* 20101026-3 :
	Moved ChangeLog to changelog= and out of the sources
	 array.
	Using $srcdir instead of $startdir for install commands

	* 20101026-2 :
	Added README and /usr/share/doc/freeswitch files

	* 20101026-1 :
	added ChangeLog.
	Tidied up the /etc/rc.d/freeswitch script and added
	 the 'fgstart' option to start under a supervisor such
	 as runit or daemontools.