@@ -1,3 +1,8 @@
+2010-11-15 TJ Vanderpoel <tj@rubyists.com>
+
+	* 20101126-8 :
+	Added /var/spool/freeswitch/storage
+
 2010-10-26 TJ Vanderpoel <tj@rubyists.com>
 
 	* 20101026-7 :
